# project-swole

./: .gitignore  Makefile  Readme.md  activity.csv  dune-project  swole.opam  todo.txt
activity/: .managed.json  meta.json
bin_prot_util/: bin_prot_util.ml  dune
rust/: Cargo.toml  dune  todo.txt
rust/src/: lib.rs  ocaml_doc.rs  ocaml_index.rs  ocaml_query.rs  ocaml_schema.rs  ocaml_tantivy.rs
src/: activity.ml  dune  ingredient.ml  macro.ml  meal.ml  search.ml  swole_lib.ml  util.ml
